# Veil.Server.v0

./: .env.example  .gitignore  Cargo.toml  README.md  nixpacks.toml  railpack.json  testnet-asp-state.json
app/crates/core/prover/src/: flows.rs
app/crates/core/stellar/src/: contract_state.rs  tx_prepare.rs
app/crates/core/types/src/: chain_data.rs  ext_data.rs  lib.rs
contracts/pool/src/: pool.rs  test.rs
deployments/scripts/: deploy.sh
deployments/testnet/: deployments.json
docs/src/: contributing.md
e2e-tests/: Cargo.toml
e2e-tests/src/tests/: e2e_bulk_payment.rs  e2e_testnet.rs  mod.rs  utils.rs
scripts/: railway-start.sh
services/prover-api/: Cargo.toml
services/prover-api/src/: chain.rs  circuits.rs  config.rs  error.rs  main.rs  proof.rs  state.rs  types.rs
services/prover-api/src/routes/: health.rs  keys.rs  mod.rs  prove.rs
services/relayer/: Cargo.toml
services/relayer/src/: config.rs  error.rs  main.rs  state.rs  types.rs
services/relayer/src/routes/: relay.rs
tools/asp-bootstrap/: Cargo.toml
tools/asp-bootstrap/src/: main.rs
