[package]
name = "asp-bootstrap"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "asp-bootstrap"
path = "src/main.rs"

[dependencies]
circuits = { workspace = true, features = ["std"] }
zkhash = { workspace = true }
anyhow = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
num-bigint = { version = "0.4", features = ["serde"] }
hex = { workspace = true, features = ["std"] }

[lints]
workspace = true
